--- a/src/less/blocks/_icons.less
+++ b/src/less/blocks/_icons.less
@@ -3,6 +3,7 @@
 	position:relative;
 	width: 40px;
 	height: 40px;
+	cursor: pointer;
 	border:1px solid @heart;
 	color: @heart;
 
@@ -11,7 +12,6 @@
 		top:50%;
 		left:50%;
 		transform:translate(-50%,-50%);
-		transition: color 0.5s;
 		cursor: pointer;
 
 		&:hover {color: @red;}
@@ -19,6 +19,5 @@
 }
 
 .icon--red {
-	transition: color 0.5s;
 	color:@red;
 }
